package com.marslps.AISafeFMS.model.enums;

public enum ContactInfoType {
    EMAIL,
    PHONE_NUMBER,
    FAX_NUMBER,
    WEBSITE,
    MAILING_ADDRESS;
}
